--- a/debian-pkg/debian/changelog
+++ b/debian-pkg/debian/changelog
@@ -1,3 +1,9 @@
+i3-autobuild-keyring (2012.03.28) unstable; urgency=low
+
+  * Update key (expires in 2 years)
+
+ -- Michael Stapelberg <michael@stapelberg.de>  Wed, 28 Mar 2012 14:55:53 +0200
+
 i3-autobuild-keyring (2011.12.01) unstable; urgency=low
 
   * Initial release
