Update package (key expiration date change)

--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 # Export the key (sign it before):
-gpg --export --armor > 0xBE1DB1F1.txt
+gpg --export --armor 0xBE1DB1F1 > 0xBE1DB1F1.txt
 
 # On the machine where the keyring package is built:
-gpg --no-default-keyring --keyring i3-autobuild-keyring.gpg --import 0xBE1DB1F1.txt
-
+gpg --no-default-keyring --keyring $PWD/debian-pkg/keyrings/i3-autobuild-keyring.gpg --import 0xBE1DB1F1.txt
