--- a/debian-pkg/debian/changelog
+++ b/debian-pkg/debian/changelog
@@ -1,3 +1,9 @@
+i3-autobuild-keyring (2016.03.28) unstable; urgency=low
+
+  * Update key (expires in 5 years)
+
+ -- Michael Stapelberg <michael@stapelberg.de>  Mon, 28 Mar 2016 02:50:05 +0200
+
 i3-autobuild-keyring (2014.03.31) unstable; urgency=low
 
   * Update key (expires in 3 years)
